# NGL

./: .envrc  .gitignore  CONTRIBUTING.MD  Cargo.toml  README.md  TODO.md  VISION.md  flake.nix  templates.json
.github/: copilot-instructions.md  session-notes.md
migration/: Cargo.toml
migration/src/: init.rs  lib.rs  m20260207_205919_create_tables.rs
src/: lib.rs  main.rs  registry.rs  schema.rs  utils.rs
src/cli/: mod.rs  progress.rs
src/db/: mod.rs
src/db/entities/: example.rs  function.rs  function_example.rs  guide.rs  guide_example.rs  guide_xref.rs  mod.rs  option.rs  option_example.rs  package.rs  package_example.rs  provider.rs  provider_kind_cache.rs  type.rs  type_example.rs
src/db/enums/: documentation_format.rs  language.rs  mod.rs
src/db/services/: mod.rs  services.rs
src/providers/: channel.rs  mod.rs  provider.rs  sink.rs  sync.rs  traits.rs
src/providers/example/: mod.rs
src/providers/hjem/: mod.rs
src/providers/hjem_docs/: mod.rs
src/providers/meta/: mod.rs  ndg_options_html.rs  ndg_search_options.rs  options_json.rs  renderdocs.rs
src/providers/nixos_manual/: mod.rs
src/providers/nixpkgs/: mod.rs  schema.rs
src/providers/noogle/: mod.rs  noogle.rs  schema.rs
