[package]
name = "ngl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.43"
clap = "4.5.57"
reqwest = "0.13.2"
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
migration = { path = "migration" }
