[package]
name = "ngl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.43"
clap = "4.5.57"
reqwest = { version = "0.13.2", features = ["brotli", "json"] }
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
migration = { path = "migration" }
pulldown-cmark = "0.13.0"
async-trait = "0.1.89"
futures = "0.3.31"
brotli2 = "0.3.2"
regex = "1.10"
aws-config = "1.8"
aws-sdk-s3 = "1.8"

urlencoding = "2.1"
strum_macros = "0.27.2"
