[package]
name = "ngl"
version = "0.1.0"
edition = "2024"
description = "Unified API for Nix documentation"
license = "GPL-3.0"
repository = "https://github.com/argosnothing/NGL"
readme = "README.md"
keywords = ["nix", "nixos", "documentation", "api"]
categories = ["command-line-utilities", "api-bindings"]

[features]
default = ["noogle"]
noogle = []
nixos_manual = []
nixpkgs = ["dep:brotli2", "dep:regex", "dep:aws-config", "dep:aws-sdk-s3"]

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.43"
clap = "4.5.57"
reqwest = { version = "0.13.2", features = ["brotli", "json"] }
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
migration = { package = "ngl-migration", version = "0.1.0", path = "migration" }
pulldown-cmark = "0.13.0"
async-trait = "0.1.89"
futures = "0.3.31"
brotli2 = { version = "0.3.2", optional = true }
regex = { version = "1.10", optional = true }
aws-config = { version = "1.8", optional = true }
aws-sdk-s3 = { version = "1.8", optional = true }

urlencoding = "2.1"
strum_macros = "0.27.2"
scraper = "0.22"
html2md = "0.2"
