[package]
name = "ngl-migration"
version = "0.1.0"
edition = "2021"
description = "Database migrations for NGL"
license = "GPL-3.0"
repository = "https://github.com/argosnothing/NGL"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
]
